--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
 
       - uses: microsoft/setup-msbuild@v2
         with:
-          msbuild-architecture: arm64
+          msbuild-architecture: x64
 
       - name: Install ninja
         run: |
